--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -263,13 +263,20 @@
   "f_address": "العنوان الاول",
   "s_address": "العنوان الثاني",
 
-  "register_link": "رابط الاشتراك"
+  "register_link": "رابط الاشتراك",
+  "payment_inprogress": "جاري العمل علي الدفع",
+  "not_enough_points": "ليس لديك رصيد كافي في المحفظة الخاصة بك",
+  "select_coun": "قم باختيار الدولة",
+  "select_stat": "قم باختيار المدينة",
+  "select_payment": "قم باختيار وسيلة الدفع",
 
-
-
-
-
-
+  "city": "المدينة",
+  "zip": "رقم البريد",
+  "select_ship": "وسيلة التوصيل",
+  "i_agree": "أنا اوافق علي ",
+  "and": " و ",
+  "terms_error": "يجب ان توافق علي هذا الحقل",
+  "opertaion_succ": "تم ارسال طلبك بنجاح"
 
 
 }
