--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -39,9 +39,10 @@
   "next": "التالى",
   "buy_now": "اشتر الان",
 
+  "answer_the_q": "قم بالاجابة علي السؤال الذي ادخلته عند التسجل",
 
   "special_offer_not_valid": "يجب ان يكون المبلغ في محفظه العموله اكبر من سعر المنتج",
-  "price_not_valid": "السعر المدخل يجب ان يكون اكبر من 10% من سعر المنتج",
+  "price_not_valid": "السعر المدخل يجب ان يكون اقل من ٩٠% من سعر المنتج",
   "special_offer": "عروض خاصة",
   "special_offer_msg": "يمكنك استخدام هذه الميزة عندما يكون لديك إجمالي المبلغ في المحفظة ، حيث يتم سحب المبلغ بالكامل ثم يتم استرداد الخصم على محفظة استرداد النقود",
 
@@ -279,7 +280,12 @@
   "opertaion_succ": "تم ارسال طلبك بنجاح",
   "copied": "نسخ إلى الحافظة",
   "upgrade_now": "طور الان",
-  "select_y_quse": "اختر السؤال الخاص بك"
-
-
+  "select_y_quse": "اختر السؤال الخاص بك",
+  "payment_methods": "وسائل الدفع",
+  "fawry": "فوري",
+  "aman": "أمان",
+  "cash": "كاش",
+  "complete_payment": "تكملة عملية الدفع",
+  "not_price_determined": "لم يتم تحديد سعر من مقدم الخدمة",
+  "credit_card": "بطاقة الائتمان"
 }
