--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -287,5 +287,8 @@
   "cash": "كاش",
   "complete_payment": "تكملة عملية الدفع",
   "not_price_determined": "لم يتم تحديد سعر من مقدم الخدمة",
-  "credit_card": "بطاقة الائتمان"
+  "credit_card": "بطاقة الائتمان",
+  "ref_num": "الرقم المرجعي",
+  "ref_msg": "رقمك المرجعي الذي يمكنك الدفع من خلاله هو "
+
 }
