--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -6,6 +6,8 @@
   "code_error": "هذا الكود لا يخص اي مستخدم",
   "something_went_error": "هناك شىء خاطىء",
   "upgrade": "التطوير",
+  "select_the_method": "اختر وسيلة الدفع",
+  "add_address_details": "تفاصيل العنوان الإضافية",
   "upgrade_img_text": "هذه الميزة عندما يكون ملف\nعدد الاشخاص\nالتي يمكنك إضافتها\nاكتملت وانت\nتريد الترقية\nحسابك من أجل\nإضافة خمسة أشخاص آخرين إلى\nالاستفادة من\nالعمولة المضافة على\nاشخاص. يمكنك استخدامها\n خمس مرات فقط.",
   "your_order": "تفاصيل الطلب",
   "change_withdraw": "تغيير طريقه السحب",
@@ -225,24 +227,20 @@
   "my_profile": "ملفي الشخصي",
   "old_pass": "كلمه المرور القديمه",
   "new_pass": "كلمه المرور الجديده",
-  "notifications": "Notifications",
-  "my_cars": "My Cars",
-  "my_orders": "My Orders",
-  "my_offers": "My Offers",
-  "my_favourites": "My Favourites",
+  "notifications": "الاشعارات",
+  "my_cars": "سياراتي",
+  "my_orders": "طلباتي",
+  "my_offers": "عروضي",
+  "chosen_answer": "اجابة السؤال الذي تم اختياره",
+  "add_safety_details": "تفاصيل العنوان لاستكمال العملية",
+  "my_favourites": "المفضلة",
   "log_out": "تسجيل الخروج",
-  "account": "Account",
-  "account_info": "Account Info",
-  "current_password": "Current Password",
-  "confirm": "Confirm",
-  "change_email": "Change email",
+  "account": "الحساب",
+  "account_info": "معلومات الحساب",
+  "current_password": "كلمة المرور الحالية",
+  "confirm": "تأكيد",
+  "change_email": "تغيير البريد الالكتروني",
   "change_password": "تغيير كلمه المرور",
-  "most_selling": "Most Selling",
-  "qar": "QAR",
-  "see_all": "see All",
-  "you_will_pay": "You will pay",
-  "optional": "( Optional )",
-  "filter_your_search": "Filter Your search",
 
   "pass_updated_successfully": "Password updated successfully",
   "added_successfully": "تمت الاضافه بنجاح",
