--- a/i18n/en.json
+++ b/i18n/en.json
@@ -39,6 +39,7 @@
   "email": "Email",
   "email_error": "Invalid email address",
   "address": "Address",
+  "add_address_details": "Additional address details",
   "password": "Password",
   "login": "Login",
   "empty_error": "This field can't be empty",
@@ -73,6 +74,7 @@
   "next": "Next",
   "sign_up_msg_1": "To protect your money during the withdrawal process, answer the question and enter the PIN",
   "pin": "PIN",
+  "chosen_answer": "Answer of the question that has been chosen",
   "choose_question": "Choose a question for your security",
   "answer_question": "Answer the question chosen",
   "sign_up_msg_2": "Select the amount of your annual subscription in order to receive your commission",
@@ -179,6 +181,7 @@
   "my_offers": "My Offers",
   "my_favourites": "My Favourites",
   "log_out": "Log Out",
+  "add_safety_details": "ADDRESS DETAILS TO CASH OUT",
   "account": "Account",
   "account_info": "Account Info",
   "current_password": "Current Password",
@@ -210,6 +213,7 @@
   "four_validate_error": "This field must be at least 4 character",
   "cpass_validation_error": "Confirm password must be equal to password",
   "order": "Order",
+  "select_the_method": "Select the method",
   "pricing_details": "Pricing details",
   "to_be_paid_now": "To be paid now",
   "to_be_paid_at_hotel": "To be paid at hotel",
